@@ -1,3 +1,11 @@
+2006-03-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/io/ObjectInputStream.java:
+	(parseContent(byte)): Added enum support.
+	* java/io/ObjectStreamConstants.java:
+	(TC_ENUM): Added.
+	(TC_MAX): Changed to new maximum, TC_ENUM.
+	
 2006-03-27  Tom Tromey  <tromey@redhat.com>
 
 	PR classpath/25189:
